--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "bootstrap": "^3.3.7",
     "pushstate-server": "^3.0.0",
     "react": "^15.5.4",
-    "react-bootstrap": "^0.31.0",
+    "react-bootstrap": "^0.29.5",
+    "react-bootstrap-validation": "^0.1.11",
+    "react-custom-validation": "^0.5.5",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1"
   },
